<resources>
    <string name="Interstitial_Down_ID" translatable="false">ca-app-pub-3940256099942544/4411468910</string>
    <string name="Interstitial_Down_ID_high" translatable="false">ca-app-pub-3940256099942544/4411468910</string>
    <string name="Interstitial_Down_Popup_ID" translatable="false">ca-app-pub-3940256099942544/4411468910</string>
    <string name="Native_Home" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="Native_Home_High" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="App_ID" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="Interstitial_Home_ID" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="Interstitial_Home_ID_High" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_video">Video</string>
    <string name="title_progress">Progress</string>
    <string name="title_settings">Settings</string>
    <string name="browser_search_hint">Paste or Type URL</string>
    <string name="browser_type_hint">Search or Type URL</string>
    <string name="dialog_video_title">Video found:</string>
    <string name="dialog_preview_video">Preview Video</string>
    <string name="dialog_download_video">Download Video</string>
    <string name="dialog_download_cancel">Cancel</string>
    <string name="video_empty_message">You have not downloaded any video yet.</string>
    <string name="video_menu_rename">Rename</string>
    <string name="video_menu_delete">Delete</string>
    <string name="video_menu_share">Share</string>
    <string name="video_rename_title">Rename video</string>
    <string name="video_rename_invalid">Invalid name. Please try again!</string>
    <string name="video_rename_exist">Video name already exists!</string>
    <string name="video_share_message">You don\'t have any video player app installed on your device</string>
    <string name="progress_empty_message">No record found</string>
    <string name="settings_general" translatable="false">GENERAL</string>
    <string name="settings_videos_folder">Videos folder</string>
    <string name="settings_folder_path" translatable="false">folder path</string>
    <string name="settings_clear_browser_cookies">Clear browser cookies</string>
    <string name="settings_message_open_folder">You don\'t have any file explorer app installed on your device</string>
    <string name="progress_menu_cancel">Cancel</string>
    <string name="app_download_channel_id" translatable="false">download_channel_id</string>
    <string name="all_text_cancel">Cancel</string>
    <string name="progress_menu_pause">pause</string>
    <string name="progress_menu_resume">resume</string>
    <string name="download_link_label">Video Url</string>
    <string name="view" translatable="false">View</string>
    <string name="paste">paste</string>
    <string name="history">History</string>
    <string name="share_link">Share Link</string>
    <string name="desktop_mode">Desktop Mode</string>
    <string name="searchbar_hint">Search</string>
    <string name="settings">Settings</string>
    <string name="about_an_hour_ago">about an hour ago</string>
    <string name="remove">remove</string>
    <string name="insert_your_regular_video">Paste your regular video url or M3U8 link here</string>
    <string name="title_media_link">Download by url</string>
    <string name="clear_history">Clear History</string>
    <string name="proxy">Proxy</string>
    <string name="proxies">Proxies</string>
    <string name="proxies_unavailable">Proxies unavailable</string>
    <string name="loading_image_view">loading image view</string>
    <string name="video_menu_open_in_folder">Open in folder</string>
    <string name="help">Help</string>
    <string name="ok">OK</string>
    <string name="new_tab">New Tab</string>
    <string name="cookies_cleared">Cookies cleared</string>
    <string name="download_started">   Video Download Started Successfully.   </string>
    <string name="more_tabs_in_next_updates">More tabs will be allowed in next updates</string>
    <string name="download_open_in_app">Open in App</string>
    <string name="download_watch_in_app">Watch Video</string>
    <string name="ad_blocker">Ad Blocker</string>
    <string name="desktop_mode_on">Desktop Mode On</string>
    <string name="desktop_mode_off">Desktop Mode Off</string>
    <string name="player_resolution">Default</string>
    <string name="video_menu_open_with">Open with…</string>
    <string name="video_found">Video Found</string>
    <string name="show_video_found_alert">Show Video Download Dialog</string>
    <string name="dontshow">Don\'t show again</string>
    <string name="whatshould">What should we do?</string>
    <string name="show_action_button">Show video download button</string>
    <string name="dialog_preview_video_force">Preview Video Force</string>
    <string name="browser_s_icon">browser\'s icon</string>
    <string name="open_download_dialog_or_restart">Open download dialog or restart video check</string>
    <string name="browser_back">Go back</string>
    <string name="browser_forward">Go forward</string>
    <string name="browser_refresh">Refresh page</string>
    <string name="stop_and_save">Stop and Save</string>
    <string name="video_title_edit">Video title edit</string>
    <string name="menu">menu</string>
    <string name="home">home</string>
    <string name="powerSave">Power save mode detected!\nVideo detection not working, turn off power save mode!</string>
    <string name="warning">Warning! Power save Mode.</string>
    <string name="download_text">download</string>
    <string name="check_every_request_on_video">Check every request on video</string>
    <string name="find_videos_by_url">Find videos by URL</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="found_videos_from">Found videos from %1$s</string>
    <string name="title">Title</string>
    <string name="ads_detection_treshold">Ads Detection Treshold: %1$s</string>
    <string name="thread_count_for_regular_files">Thread Count for regular files: %1$s</string>
    <string name="thread_count_for_hls_and_mpd">Thread Count for HLS and MPD: %1$s</string>
    <string name="error_template">Error: %1$s</string>
    <string name="not_available">N/A</string>
    <string name="download_finished_template">%1$s \u2022 %2$s</string>
    <string name="download_queued_template">%1$s/%2$s \u2022 %3$s</string>
    <string name="downloading_metadata">Downloading metadata</string>
    <string name="pref_key_browser_hide_menu_icon" translatable="false">pref_key_browser_hide_menu_icon</string>
    <string name="downloads">Downloads</string>
    <string name="stopped">Stopped</string>
    <string name="pending">Pending</string>
    <string name="waiting_for_network">Waiting for network</string>
  <string name="download_queued_progress_template">%1$s/%2$s \u2022 %3$s \u2022 %4$s/s</string>
  <string name="waiting_for_retry">Waiting for retry</string>
    <string name="pause">Pause</string>
    <string name="delete_selected_downloads">Delete the selected downloads? This operation cannot be undone</string>
    <string name="delete_selected_download">Delete the selected download? This operation cannot be undone</string>
    <string name="deleting">Deleting</string>
    <string name="cancel">CANCEL</string>
    <string name="share_via">Share via</string>
    <string name="face_book">Face Book</string>
    <string name="how_to_use">How to Download?</string>
    <string name="social_link_hint">Type link here…</string>
    <string name="social_paste_here">Paste here</string>
    <string name="social_download_cta">DOWNLOAD</string>
    <string name="social_open_app">Open &gt;</string>
    <string name="social_how_to_download_video">How to download video?</string>
    <string name="social_app_subtitle_facebook">Find the video from Facebook app.</string>
    <string name="social_app_subtitle_instagram">Find the video from Instagram app.</string>
    <string name="social_app_subtitle_tiktok">Find the video from TikTok app.</string>
    <string name="social_app_subtitle_twitter">Find the video from Twitter app.</string>
    <string name="social_app_subtitle_dailymotion">Find the video from Dailymotion.</string>
    <string name="social_app_subtitle_imdb">Find the video from IMDb.</string>
    <string name="social_app_subtitle_vimeo">Find the video from Vimeo.</string>
    <string name="social_step1_title_facebook">Open Facebook App</string>
    <string name="social_step1_title_instagram">Open Instagram App</string>
    <string name="social_step1_title_tiktok">Open TikTok App</string>
    <string name="social_step1_title_twitter">Open Twitter App</string>
    <string name="social_step1_title_dailymotion">Open Dailymotion</string>
    <string name="social_step1_title_imdb">Open IMDb</string>
    <string name="social_step1_title_vimeo">Open Vimeo</string>
    <string name="social_step1_subtitle_facebook">Find the video you want to download</string>
    <string name="social_step1_subtitle_instagram">Find the video you want to download</string>
    <string name="social_step1_subtitle_tiktok">Find the video you want to download</string>
    <string name="social_step1_subtitle_twitter">Find the video you want to download</string>
    <string name="social_step1_subtitle_dailymotion">Find the video you want to download</string>
    <string name="social_step1_subtitle_imdb">Find the video you want to download</string>
    <string name="social_step1_subtitle_vimeo">Find the video you want to download</string>
    <string name="social_step2_title">Tap Share and Copy Link</string>
    <string name="social_step2_subtitle_facebook">Find the video you want to download &amp; copy link</string>
    <string name="social_step2_subtitle_instagram">Find the video you want to download &amp; copy link</string>
    <string name="social_step2_subtitle_tiktok">Find the video you want to download &amp; copy link</string>
    <string name="social_step2_subtitle_twitter">Find the video you want to download &amp; copy link</string>
    <string name="social_step2_subtitle_dailymotion">Find the video you want to download &amp; copy link</string>
    <string name="social_step2_subtitle_imdb">Find the video you want to download &amp; copy link</string>
    <string name="social_step2_subtitle_vimeo">Find the video you want to download &amp; copy link</string>
    <string name="social_step3_title">Download &amp; Enjoy</string>
    <string name="social_step3_subtitle">Select resolution and tap download.</string>
    <string name="tab">Tabs</string>
    <plurals name="unable_sharing">
        <item quantity="one">The file cannot be shared.</item>
        <item quantity="other">The files cannot be shared.</item>
    </plurals>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Confirm</string>
    <string name="search">Search</string>
    <string name="co_co">co co</string>
    <string name="search2">Search</string>
    <string name="cancel2">Cancel</string>
    <string name="select_quality">Select Quality</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="enable">Enable</string>
    <string name="next">Next</string>
    <string name="close_tabs">Close all tabs?</string>
    <string name="cancel_">Cancel</string>
    <string name="resume">Resume</string>
    <string name="download_directly_within_tiktok">Download directly within Social Media</string>
    <string name="instant_download_tiktok_widget">Instant download while staying on SocialMedia with Video Downloader Browser Hub Floating Widget.</string>
    <string name="try_now">Try Now</string>
    <string name="allow_appear_on_top_permission">Allow Appear-on-top Permission</string>
    <string name="grant_permission">Grant Permission</string>
</resources>