<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#26FFFFFF"
        android:layout_marginTop="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/resume"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#00000000"
                android:contentDescription="@string/progress_menu_resume"
                android:padding="3dp"
                android:scaleType="fitXY" />

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="16dp"
                android:layout_toStartOf="@id/menu"
                android:layout_toEndOf="@id/resume"
                android:fontFamily="@font/poppins_regular"
                android:orientation="vertical"
                android:textColor="@color/brand_text_primary">

                <TextView
                    android:id="@+id/filename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="middle"
                    android:fontFamily="@font/poppins_regular"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="middle"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:textAppearance="@string/co_co"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:maxLines="3"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:textColor="?attr/colorError" />
            </LinearLayout>

            <ImageView
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="#00000000"
                android:contentDescription="@string/menu"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_download_menu" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
