<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/round_corner"
    android:backgroundTint="@color/card_stroke"
    android:paddingBottom="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/brand_text_primary"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_cancel_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ic_open"
            app:layout_constraintBottom_toBottomOf="@id/ic_open"
            app:layout_constraintStart_toEndOf="@id/ic_open"
            android:text="@string/cancel_"
            android:textColor="@color/brand_text_primary"
            android:textSize="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_10sdp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/cl_cancel"
        android:background="@color/gray"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/view1"
        android:layout_marginTop="@dimen/_15sdp">

        <ImageView
            android:id="@+id/ic_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/pause_progress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ic_rename"
            app:layout_constraintBottom_toBottomOf="@id/ic_rename"
            app:layout_constraintStart_toEndOf="@id/ic_rename"
            android:text="@string/pause"
            android:textColor="@color/brand_text_primary"
            android:textSize="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_10sdp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/cl_pause"
        android:background="@color/gray"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_resume"
        android:layout_width="match_parent"
        android:paddingVertical="@dimen/_5sdp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view2"
        android:layout_marginTop="@dimen/_15sdp">

        <ImageView
            android:id="@+id/ic_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/play_progress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ic_share"
            app:layout_constraintBottom_toBottomOf="@id/ic_share"
            app:layout_constraintStart_toEndOf="@id/ic_share"
            android:text="@string/resume"
            android:textColor="@color/brand_text_primary"
            android:textSize="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_10sdp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>